# crypto

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build_release.sh  build_test.sh  run_test.sh
src/: CMakeLists.txt  test.c
test/: CMakeLists.txt  main.c
test/framework/: CMakeLists.txt  framework.hpp
